Make breadcrumbs use keys and not values

--- a/app/front/scripts/directives/templates/breadcrumbs.html
+++ b/app/front/scripts/directives/templates/breadcrumbs.html
@@ -1,8 +1,8 @@
 <ol class="breadcrumb">
   <li ng-repeat="breadcrumb in breadcrumbs">
-    <span ng-if="$last">{{ breadcrumb.value }}</span>
+    <span ng-if="$last">{{ breadcrumb.display }}</span>
     <a ng-if="!$last" ng-click="events.clickBreadcrumb(breadcrumb)">
-      {{ breadcrumb.value }}
+      {{ breadcrumb.display }}
     </a>
   </li>
 </ol>
