Remove chart description for now
openspending/openspending#975

--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -272,6 +272,7 @@ textarea {
   }
 
   .x-visualization-info {
+    display: none; //TODO: Restore once we have the info
     position: absolute;
     bottom: 0;
     right: 0;
