openspending/openspending#935 Default dimension for Columns in Pivot Table vis

--- a/app/front/scripts/directives/templates/sidebar.html
+++ b/app/front/scripts/directives/templates/sidebar.html
@@ -124,7 +124,7 @@
     <hr>
 
     <strong>Columns</strong>
-    <div ng-repeat="hierarchy in state.hierarchies">
+    <div ng-repeat="hierarchy in columnsHierarchies">
       <sidebar-list items="hierarchy.dimensions" selected="state.dimensions.current.columns" key="columns"
         title="{{ getHierarchyName(hierarchy) }}" can-clear="{{ state.dimensions.current.columns.length > 1 ? 'yes' : '' }}"></sidebar-list>
     </div>
