openspending/openspending#972 Fixed sidebar and params for Time Series vis

--- a/app/front/scripts/directives/templates/sidebar.html
+++ b/app/front/scripts/directives/templates/sidebar.html
@@ -68,8 +68,7 @@
     </div>
     <strong>Series</strong>
     <div ng-repeat="hierarchy in state.hierarchies">
-      <sidebar-list items="hierarchy.dimensions" selected="state.dimensions.current.groups"
-                    ng-if="hierarchy.key != 'date'"
+      <sidebar-list items="hierarchy.dimensions" selected="state.dimensions.current.series"
         title="{{ getHierarchyName(hierarchy) }}"></sidebar-list>
     </div>
 
