--- a/app/front/scripts/directives/templates/visualizations.html
+++ b/app/front/scripts/directives/templates/visualizations.html
@@ -82,7 +82,7 @@
       <chart ng-if="!state.flag.renderingCharts"
         type="line"
         cube="{{state.availablePackages.current}}"
-        state="state.babbage"
+        state="state.babbageTimeSeries"
         endpoint="{{state.apiUrl}}">
       </chart>
     </div>
