--- a/app/views/pages/main.html
+++ b/app/views/pages/main.html
@@ -47,7 +47,7 @@
         <visualizations state="state" events="events" type="state.selectedChartType"></visualizations>
       </div>
 
-      <package-info datapackage="dataPackageInfo"></package-info>
+      <package-info datapackage="dataPackageInfo" model-info="modelInfo"></package-info>
     </div>
   </div>
   <div class="waiter text-center" ng-if="(state.isPackageLoading || state.isStarting)">
