Add link to explorer

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -3,7 +3,7 @@
   <div class="navbar-header navbar-header-full-width">
     <ul class="nav navbar-nav pull-right">
       <li><a href="/packager/">Upload Data</a></li>
-      <li><a href="/about/">About</a></li>
+      <li><a href="/explorer/">Explore Datasets</a></li>
 
       <li ng-if="!login.isLoggedIn" class="user">
         <a href="javascript:void(0)" ng-click="login.login()">
