--- a/app/views/layouts/embedded.html
+++ b/app/views/layouts/embedded.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="styles/embedded.css">
 </head>
-<body ng-app="Application" ng-controller="main" class="ng-cloak">
+<body ng-controller="MainController" class="ng-cloak">
   {% block content %}{% endblock %}
   <script src="app.js?{{ sessionSalt }}"></script>
   <script src="{{ authLibraryUrl }}"></script>
