openspending/openspending#999 Refactoring core app services and UI

--- a/app/views/layouts/base.html
+++ b/app/views/layouts/base.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="styles/app.css?{{ sessionSalt }}">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body ng-controller="MainController" class="ng-cloak">
+<body ng-controller="MainController">
 <div id="root"></div>
 
 {% if not isEmbedded %}
