--- a/app/views/pages/embedded.html
+++ b/app/views/pages/embedded.html
@@ -15,12 +15,12 @@
   }
 </style>
 
-<div  ng-if="!state.isStarting && !state.isPackageLoading">
+<div  ng-if="!isLoading.application && !isLoading.package">
   {% if view == 'piechart' %}
   {% raw %}
   <pie-chart
     ng-if="!state.flag.renderingCharts"
-    cube="{{state.availablePackages.current}}" 
+    cube="{{state.availablePackages.current}}"
     state="state.babbage"
     endpoint="{{state.apiUrl}}"
   ></pie-chart>
@@ -31,7 +31,7 @@
   {% raw %}
   <chart
     ng-if="!state.flag.renderingCharts"
-    cube="{{state.availablePackages.current}}" 
+    cube="{{state.availablePackages.current}}"
     type="bar"
     state="state.babbage"
     endpoint="{{state.apiUrl}}"
@@ -43,8 +43,8 @@
   {% raw %}
   <chart
     ng-if="!state.flag.renderingCharts"
-    cube="{{state.availablePackages.current}}" 
-    type="line" 
+    cube="{{state.availablePackages.current}}"
+    type="line"
     state="state.babbage"
     endpoint="{{state.apiUrl}}"
   ></chart>
@@ -68,7 +68,7 @@
   <breadcrumbs breadcrumbs="state.breadcrumbs" events="events"></breadcrumbs>
   <bubbletree
     ng-if="!state.flag.renderingCharts"
-    cube="{{state.availablePackages.current}}" 
+    cube="{{state.availablePackages.current}}"
     state="state.babbage"
     endpoint="{{state.apiUrl}}"
   ></bubbletree>
@@ -79,7 +79,7 @@
   {% raw %}
   <babbage-table
     ng-if="!state.flag.renderingCharts"
-    cube="{{state.availablePackages.current}}" 
+    cube="{{state.availablePackages.current}}"
     state="state.babbage"
     endpoint="{{state.apiUrl}}"
   ></babbage-table>
