openspending/openspending#999 Embedded mode

--- a/app/views/layouts/base.html
+++ b/app/views/layouts/base.html
@@ -13,12 +13,10 @@
   <link rel="stylesheet" href="styles/app.css?{{ sessionSalt }}">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body ng-controller="MainController">
+<body ng-controller="MainController" ng-init="isEmbedded=false">
 <div id="root"></div>
 
-{% if not isEmbedded %}
-  {% include "partials/header.html" %}
-{% endif %}
+{% include "partials/header.html" %}
 
 <div class="x-page-container">
 <div>
@@ -29,16 +27,10 @@
 </div>
 </div>
 
-{% if not isEmbedded %}
-  {% include "partials/footer.html" %}
-{% endif %}
+{% include "partials/footer.html" %}
 
 <script src="app.js?{{ sessionSalt }}"></script>
 <script src="{{ authLibraryUrl }}"></script>
-
-<script>
-  window.isEmbedded = {{isEmbedded}}
-</script>
 
 </body>
 </html>
