openspending/openspending#999 Update gulpfile and styles for embedded mode

--- a/app/front/styles/embedded.less
+++ b/app/front/styles/embedded.less
@@ -52,3 +52,14 @@ a {
     color: @breadcrumb-active-color;
   }
 }
+
+.alert {
+  display: none !important;
+}
+
+.container {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+@import "./_pivot.less";
