--- a/app/views/layouts/embedded.html
+++ b/app/views/layouts/embedded.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>OS Viewer | OpenSpending | Open Knowledge International</title>
   <link href="//fonts.googleapis.com/css?family=Hind:400,300,500,600,700" rel="stylesheet" type="text/css">
-
+  <link rel="stylesheet" href="styles/vendor.css?{{ sessionSalt }}">
   <link rel="stylesheet" href="styles/embedded.css">
 </head>
 <body ng-controller="MainController" ng-init="isEmbedded=true">
