--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -430,25 +430,10 @@ textarea {
   }
 }
 
-table.pvtTable {
-  font-size: inherit;
-  color: inherit;
-
-  tr th, tr td {
-    font-size: inherit;
-    color: inherit;
-    background-color: #f5f5f5;
-    border-color: #ddd;
-    padding: 5px;
-
-    &.pvtVal {
-      background-color: #fff;
-    }
-  }
-}
-
 .breadcrumb {
   a {
     cursor: pointer;
   }
 }
+
+@import "./_pivot.less";
