Add link to OS-Admin

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -23,6 +23,7 @@
           </div>
           <div class="x-info">
             <div><strong>{{ login.name }}</strong></div>
+            <div><a href="/admin/">Profile</a></div>
             <div><a href="javascript:void(0);" ng-click="login.logout()">Logout</a></div>
           </div>
         </div>
