--- a/app/views/pages/embedded.html
+++ b/app/views/pages/embedded.html
@@ -12,6 +12,7 @@
     <bubble-tree-visualization ng-switch-when="BubbleTree" params="state.params"></bubble-tree-visualization>
     <map-visualization ng-switch-when="Map" params="state.params"></map-visualization>
     <pivot-table-visualization ng-switch-when="PivotTable" params="state.params"></pivot-table-visualization>
+    <radar-chart-visualization ng-switch-when="Radar" params="state.params"></radar-chart-visualization>
   </div>
 </div>
 {% endraw %}
