Added radar chart (#128)
* openspending/openspending#1089 Added redar chart

* Add postinstall script to fix 'npm install' bug (npm is not resolving dependencies properly)

* Change Radar vis type from 'pivot-table' to 'sortable-series'

* Use node 4.5.0

* Tests

--- a/app/views/pages/embedded.html
+++ b/app/views/pages/embedded.html
@@ -13,6 +13,7 @@
     <map-visualization ng-switch-when="Map" params="state.params"></map-visualization>
     <pivot-table-visualization ng-switch-when="PivotTable" params="state.params"></pivot-table-visualization>
     <sankey-visualization ng-switch-when="Sankey" params="state.params"></sankey-visualization>
+    <radar-chart-visualization ng-switch-when="Radar" params="state.params"></radar-chart-visualization>
   </div>
 </div>
 {% endraw %}
