Fix styles for Pivot Table

--- a/app/front/styles/_pivot.less
+++ b/app/front/styles/_pivot.less
@@ -1,16 +1,16 @@
 table.pvtTable {
-  font-size: inherit;
-  color: inherit;
+  font-size: inherit !important;
+  color: inherit !important;
 
   tr th, tr td {
-    font-size: inherit;
-    color: inherit;
-    background-color: #f5f5f5;
-    border-color: #ddd;
-    padding: 5px;
+    font-size: inherit !important;
+    color: inherit !important;
+    background-color: #f5f5f5 !important;
+    border-color: #ddd !important;
+    padding: 5px !important;
 
     &.pvtVal {
-      background-color: #fff;
+      background-color: #fff !important;
     }
   }
 }
