openspending/openspending#1099 Do not show all packages in Search packages dropdown

--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -215,6 +215,10 @@ textarea {
     border-bottom: 1px solid #e7e7e7;
   }
 
+  &.readonly .dropdown > h3 {
+    cursor: text;
+  }
+
   .dropdown .dropdown-menu {
     background: #f5f5f5;
     border: 0;
