--- a/app/views/pages/main.html
+++ b/app/views/pages/main.html
@@ -13,7 +13,7 @@
 <div>
   <div ng-if="!isLoading.application" ng-cloak>
     <package-selector ng-if="state.package.meta" items="availablePackages"
-      datapackage="state.package.meta" read-only="{{ disablePackageSelector ? 'yes' : '' }}"></package-selector>
+      datapackage="state.package.meta" read-only="disablePackageSelector || availablePackages.length <= 1"></package-selector>
 
     <div ng-if="!isLoading.package">
       <div class="clearfix">
