openspending/openspending#1124 Lock headers and totals in pivot table

--- a/app/front/styles/_pivot.less
+++ b/app/front/styles/_pivot.less
@@ -9,8 +9,15 @@ table.pvtTable {
     border-color: #ddd !important;
     padding: 5px !important;
 
+    &.pvtTotal {
+      white-space: nowrap;
+      vertical-align: middle;
+    }
+
     &.pvtVal {
       background-color: #fff !important;
+      white-space: nowrap;
+      vertical-align: middle;
     }
   }
 }
