--- a/app/views/pages/embedded.html
+++ b/app/views/pages/embedded.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% raw %}
 <div ng-if="!isLoading.application && !isLoading.package" ng-cloak>
-  <div ng-switch="state.params.visualizations[0]" class="row">
+  <div ng-switch="state.params.visualizations[0]">
     <treemap-visualization ng-switch-when="Treemap" params="state.params"></treemap-visualization>
     <pie-chart-visualization ng-switch-when="PieChart" params="state.params"></pie-chart-visualization>
     <bar-chart-visualization ng-switch-when="BarChart" params="state.params"></bar-chart-visualization>
