Update project dependencies + remove unused; replace browserify with webpack; replace jscs with eslint; run app on port 4000 by default

--- a/app/views/layouts/embedded.html
+++ b/app/views/layouts/embedded.html
@@ -16,7 +16,7 @@
 <body ng-controller="MainController" ng-init="isEmbedded=true; disablePackageSelector=true">
   {% block content %}{% endblock %}
 
-  <script src="app.js?{{ sessionSalt }}"></script>
+  <script src="scripts/app.js?{{ sessionSalt }}"></script>
   <script src="{{ authLibraryUrl }}"></script>
 </body>
 </html>
