--- a/app/views/layouts/base.html
+++ b/app/views/layouts/base.html
@@ -42,7 +42,7 @@
 {% include "partials/footer.html" %}
 {% endif %}
 
-<script src="app.js?{{ sessionSalt }}"></script>
+<script src="scripts/app.js?{{ sessionSalt }}"></script>
 <script src="{{ authLibraryUrl }}"></script>
 
 </body>
