openspending/openspending#1042 Basic implementation

--- a/app/views/layouts/base.html
+++ b/app/views/layouts/base.html
@@ -19,6 +19,7 @@
     .navbar-brand.navbar-brand-primary { box-shadow: inset 50px 0 0 {{ theme.colors.brand }} !important; }
   </style>
 
+  {% include "partials/share.html" %}
   {% include "../partials/snippets.html" %}
 </head>
 <body ng-controller="MainController"
