--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -3,7 +3,7 @@
   <div class="navbar-header navbar-header-full-width">
     <ul class="nav navbar-nav pull-right" ng-cloak>
         <li ng-repeat="link in theme.header.links | filter : { title : '!!' }">
-            <a href="{{ link.href }}">{{ link.title }}</a>
+            <a ng-href="{{ link.href }}">{{ link.title }}</a>
         </li>
 
       <li ng-if="!login.isLoggedIn" class="user" ng-cloak>
@@ -33,8 +33,8 @@
     <a class="navbar-brand navbar-brand-primary navbar-brand-black"
        href="{% endraw %}{{ basePath }}/{% raw %}"
        target="_self" title="{{ theme.header.logo.title }}" ng-cloak>
-        <img src="{{ theme.header.logo.icon }}" class="os-logo-part">
-        <img src="{{ theme.header.logo.image }}" class="os-logo-part"></a>
+        <img ng-src="{{ theme.header.logo.icon }}" class="os-logo-part">
+        <img ng-src="{{ theme.header.logo.image }}" class="os-logo-part"></a>
   </div>
 </nav>
 {% endraw %}
